Containerized the app
