# docs/swagger.json
@@ -11,159 +11,17 @@
     "paths": {
         "/authenticate/user/activate/{token}": {
             "put": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Activates a new user account via the token sent to their email",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Activates a new user",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Activation token",
-                        "name": "token",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "User activated successfully",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {}
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {}
-                    }
-                }
+                "responses": {}
             }
         },
         "/authenticate/user/signin": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Logs in a user with username and password, returning a JWT token for authenticated requests",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Logs in a user and returns a JWT token",
-                "parameters": [
-                    {
-                        "description": "User Login Payload",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.LoginUserPayload"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "User activated successfully",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {}
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {}
-                    }
-                }
+                "responses": {}
             }
         },
         "/authenticate/user/signup": {
             "post": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Registers a new user with email, username, password, and role level: 1 for user 2 for moderator 3 for admin",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Registers a new user",
-                "parameters": [
-                    {
-                        "description": "User Signup",
-                        "name": "payload",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.UserPayload"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {}
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {}
-                    }
-                }
+                "responses": {}
             }
         },
         "/post/{postID}/comments": {
@@ -181,7 +39,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Posts"
                 ],
                 "summary": "Creates a new comment on a post",
                 "parameters": [
@@ -239,7 +97,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Posts"
                 ],
                 "summary": "Creates a new post",
                 "parameters": [
@@ -290,7 +148,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Posts"
                 ],
                 "summary": "Fetches a user post",
                 "parameters": [
@@ -337,7 +195,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Posts"
                 ],
                 "summary": "Deletes a user post",
                 "parameters": [
@@ -384,7 +242,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Posts"
                 ],
                 "summary": "Updates a user post",
                 "parameters": [
@@ -442,7 +300,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "Feed"
                 ],
                 "summary": "Fetches a user feed",
                 "parameters": [
@@ -479,6 +337,55 @@
                             "items": {
                                 "$ref": "#/definitions/models.UserFeed"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {}
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {}
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {}
+                    }
+                }
+            }
+        },
+        "/user/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Fetches a user profile by ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Fetches a user profile",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.User"
                         }
                     },
                     "400": {
@@ -593,55 +500,6 @@
                     }
                 }
             }
-        },
-        "/users/{id}": {
-            "get": {
-                "security": [
-                    {
-                        "ApiKeyAuth": []
-                    }
-                ],
-                "description": "Fetches a user profile by ID",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "users"
-                ],
-                "summary": "Fetches a user profile",
-                "parameters": [
-                    {
-                        "type": "integer",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {}
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {}
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {}
-                    }
-                }
-            }
         }
     },
     "definitions": {
@@ -654,25 +512,6 @@
                 "content": {
                     "type": "string",
                     "maxLength": 100
-                }
-            }
-        },
-        "main.LoginUserPayload": {
-            "type": "object",
-            "required": [
-                "password",
-                "username"
-            ],
-            "properties": {
-                "password": {
-                    "type": "string",
-                    "maxLength": 100,
-                    "minLength": 4
-                },
-                "username": {
-                    "type": "string",
-                    "maxLength": 100,
-                    "minLength": 3
                 }
             }
         },
@@ -709,31 +548,6 @@
                 "title": {
                     "type": "string",
                     "maxLength": 100
-                }
-            }
-        },
-        "main.UserPayload": {
-            "type": "object",
-            "required": [
-                "email",
-                "level",
-                "password",
-                "username"
-            ],
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "level": {
-                    "type": "integer",
-                    "maximum": 3,
-                    "minimum": 1
-                },
-                "password": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
                 }
             }
         },
